# dbt-exasol

./: .gitattributes  .gitignore  README.md  docker-compose.yml  okteto.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.env  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
dbt/adapters/exasol/: __init__.py  __version__.py  column.py  connections.py  impl.py  relation.py
dbt/include/exasol/: dbt_project.yml  profile_template.yml
dbt/include/exasol/macros/: adapters.sql  apply_grants.sql  catalog.sql  create_table_helpers.sql  metadata.sql  schema_tests.sql  validate_sql.sql
dbt/include/exasol/macros/materializations/: incremental.sql  incremental_strategies.sql  merge.sql  seed.sql  snapshot.sql  snapshot_merge.sql  strategies.sql  table.sql  view.sql
dbt/include/exasol/macros/materializations/tests/: helpers.sql
dbt/include/exasol/macros/utils/: any_value.sql  bool_or.sql  dateadd.sql  datediff.sql  hash.sql  last_day.sql  listagg.sql  safe_cast.sql  split_part.sql  timestamps.sql
tests/: conftest.py
tests/functional/: fixtures.py  test_basic.py  test_failing_test.py  test_grants.py  test_incremental.py  test_issues.py  test_view_comment.py
tests/functional/adapter/: expected_catalog.py  files.py  test_basic.py  test_concurrency.py  test_docs_generate.py  test_ephemeral.py  test_failing_test.py  test_get_relation_last_modified.py  test_grants.py  test_python_model.py
tests/functional/adapter/aliases/: test_aliases.py
tests/functional/adapter/concurrency/: test_concurrency.py
tests/functional/adapter/constraints/: fixtures.py  test_constraints.py
tests/functional/adapter/debug/: test_dbt_debug.py
tests/functional/adapter/empty/: test_empty.py
tests/functional/adapter/ephemeral/: test_ephemeral.py
tests/functional/adapter/grants/: test_grants.py
tests/functional/adapter/incremental/: test_incremental_merge_exclude_columns.py  test_incremental_on_schema_change.py  test_incremental_predicates.py  test_incremental_run_result.py
tests/functional/adapter/limit/: fixtures.py  test_limit.py
tests/functional/adapter/persist_docs/: test_persist_docs.py
tests/functional/adapter/query_comment_tests/: test_query_comment.py
tests/functional/adapter/relations/: test_changing_relation_type.py
tests/functional/adapter/simple_copy/: test_simple_copy.py
tests/functional/adapter/simple_seed/: test_simple_seed.py  test_simple_seed_override.py
tests/functional/adapter/simple_snapshot/: test_simple_snapshot.py
tests/functional/adapter/store_test_failures_tests/: test_store_test_failures.py
tests/functional/adapter/unit_testing/: test_unit_testing.py
tests/functional/adapter/utils/: test_mixed_type_retrieval.py  test_null_compare.py  test_timestamps.py  test_utils.py  test_validate_sql.py  utils_fixtures.py
tests/functional/adapter/utils/data_types/: test_data_types.py  test_type_bigint.py
tests/functional/artifacts/: test_override.py
tests/functional/example/: fixtures.py
