[tool.poetry]
name = "dbt-exasol"
version = "1.2.2"
description = "Adapter to dbt-core for warehouse Exasol"
authors = ["Torsten Glunde <torsten.glunde@alligator-company.com>", "Ilija Kutle <ilija.kutle@alligator-company.com>"]
homepage = "https://alligatorcompany.gitlab.io/dbt-exasol"
repository = "https://github.com/tglunde/dbt-exasol"
packages = [
  { include = "dbt" },
  { include = "dbt/**/*.py" },
  { include = "tests/**/*.py"}
]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2, <4"
dbt-core = "^1.2, <1.3"
pyexasol = "^0.25.0"
dbt-tests-adapter = "^1.2, <1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
tox = "^3.26.0"

[tool.poetry.group.dev.dependencies]
dbt-tests-adapter = "^1.2.1"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
