[tool.poetry]
name = "dbt-exasol"
version = "1.6.2"
description = "Adapter to dbt-core for warehouse Exasol"
authors = ["Torsten Glunde <torsten.glunde@alligator-company.com>", "Ilija Kutle <ilija.kutle@alligator-company.com>"]
homepage = "https://alligatorcompany.gitlab.io/dbt-exasol"
repository = "https://github.com/tglunde/dbt-exasol"
packages = [
  { include = "dbt" },
  { include = "dbt/**/*.py" },
  { include = "tests/**/*.py"}
]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
dbt-core = "^1.6 <1.7"
pyexasol = "^0.25.0"
sqlfluff = "^2.1"
pyyaml = "6.0.1"
pytest-xdist = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.8"
exceptiongroup = "^1.1.1"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
tox = "^3.26.0"
dbt-tests-adapter = "^1.6 <1.7"
pytest-parallel = "^0.1.1"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
