[tool.poetry]
name = "dbt-exasol"
version = "1.8.0"
description = "Adapter to dbt-core for warehouse Exasol"
authors = ["Torsten Glunde <torsten.glunde@alligator-company.com>", "Ilija Kutle <ilija.kutle@alligator-company.com>"]
homepage = "https://alligatorcompany.gitlab.io/dbt-exasol"
repository = "https://github.com/tglunde/dbt-exasol"
packages = [
  { include = "dbt" },
  { include = "dbt/**/*.py" },
  { include = "tests/**/*.py"}
]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.13"
pyexasol = "^0.25.2"
sqlfluff = "^2.3"
pyyaml = "6.0.1"
hologram = "^0.0.16"
pytest-xdist = "^3.3.1"
protobuf = "4.25.3"
dbt-adapters = "^1.3.2"
dbt-core = "^1.8.4"
dbt-tests-adapter = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.8"
exceptiongroup = "^1.1.1"
black = ">=22.8,<25.0"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
tox = "^3.26.0"
pytest-parallel = "^0.1.1"
ipykernel = "^6.25.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
